2002-06-13  Richard Williamson  <rjw@apple.com>

    
	* kwq/KWQWidget.mm: (QWidget::setCursor):  restored code
	* kwq/external.h:   removed definitions no longer needed
	* khtml/rendering/render_form.cpp: (RenderLineEdit::calcMinMaxWidth): tweaked size

2002-06-12  Kenneth Kocienda  <kocienda@apple.com>

	* kwq/kwqdebug.h: Made assertion failure console message bolder and easier to see.

2002-06-11  Darin Adler  <darin@apple.com>

	* kwq/KWQKURL.mm:
	(RelativeURLKeyRetainCallBack): Use a ref count.
	(RelativeURLKeyReleaseCallBack): Use a ref count instead of assuming there will
	never be more than one reference.
	(KURL::normalizeRelativeURLString): Remove the workaround for CFURL bug 2891336.
	(operator==): Don't put URLs on the autorelease pool just to compare them.

2002-06-10  Darin Adler  <darin@apple.com>

	* khtml/css/cssstyleselector.cpp: Fix uninitialized variable warning.

2002-06-10  Darin Adler  <darin@apple.com>

	Merged in changes from KDE 3.0.1.

	* kwq/kdecore/kurl.h:
	* kwq/KWQKURL.mm: (operator==): New, needed by some 3.0.1 code.

	* kwq/qt/qpalette.h: Add QPalette::NColorGroups and QColorGroup::NColorRoles.
	* kwq/KWQPalette.mm: Simplify by getting rid of "private" indirection.
	(QPalette::color): New, needed by some 3.0.1 code.
	* kwq/KWQColorGroup.mm: Simplify by getting rid of "private" indirection.

	* kwq/qt/qstring.h:
	* kwq/KWQString.mm: (QConstString::QConstString): Change parameter to const QChar *
	to match Qt so we compile.

	* kwq/qt/qtextedit.h:
	* kwq/KWQTextEdit.mm: (QTextEdit::setTabStopWidth): Add unimplemented placeholder,
	needed by some 3.0.1 code.

	* kwq/qt/qvaluelist.h:
	* kwq/KWQValueListImpl.h:
	* kwq/KWQValueListImpl.mm: Simplify implementation.

	* WebCore-tests.exp: Update for changes in QValueList implementation.

	* kwq/kdecore/klibloader.h: Add include of <kio/global.h> to make something compile.

	* kwq/khtml/java/kjavaappletcontext.h: Add JType and constructor that takes DCOPObject*.
